# template-fastapi

./: .env.template  404.html  Dockerfile  Makefile  README.md  function_app.py  index.html  local.settings.json  main.py  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-release.yaml  ghcr-release.yaml
datasets/: foodies_restaurants.csv
docs/: external-specification.md  index.md  internal-design.md
external-specification/: index.html
internal-design/: index.html
scripts/: agents.py  agents_azure_ai_foundry.py  agents_langgraph.py  chats.py  files.py  foodies_restaurants.py  langgraph_agent.py  microsoft_graphs.py  msgraphs_sites.py  speeches.py
scripts/msgraphs/: __init__.py  sites.py
search/: search_index.json
template_fastapi/: app.py  core.py  opentelemetry.py
template_fastapi/core/: __init__.py
template_fastapi/core/langgraph/: __init__.py  agent.py  graph.py  llm.py  nodes.py  state.py  tools.py
template_fastapi/database/: __init__.py
template_fastapi/internals/: __init__.py
template_fastapi/internals/langgraph/: __init__.py  agents.py  graphs.py  llms.py  nodes.py  states.py  tools.py
template_fastapi/models/: __init__.py  agent.py  chat.py  file.py  item.py  restaurant.py  speech.py
template_fastapi/repositories/: agents.py  chats.py  files.py  items.py  msgraphs.py  msgraphs_sites.py  restaurants.py  speeches.py
template_fastapi/routers/: __init__.py  agents.py  chats.py  demos.py  files.py  foodies.py  games.py  items.py  msgraphs.py  msgraphs_sites.py  speeches.py
template_fastapi/routers/agents/: __init__.py  azure_ai_foundry.py  core.py  langgraph.py
template_fastapi/routers/msgraphs/: __init__.py  sites.py
template_fastapi/settings/: azure_ai_foundry.py  azure_blob_storage.py  azure_cosmosdb.py  azure_openai.py  azure_speech.py  chats.py  logging.py  microsoft_graph.py  microsoft_graphs.py
template_fastapi/templates/: chat.html  chats.html
tests/: test_additional_routers.py  test_agents.py  test_api.py  test_core.py  test_demos.py  test_langgraph.py
